Scrollbar repaired.

--- a/SCSS/partial/main.scss
+++ b/SCSS/partial/main.scss
@@ -81,6 +81,10 @@
     height: $navbar-height;
 }
 
+.invisible{
+    display: none !important;
+}
+
 // .dropdown-menu {
 //     z-index: 1100 !important;
 // }
